_______________________________

Solarus 1.5.0 (in progress)
_______________________________

Engine changes
--------------

* Print when the main loop starts and stops.
* Print the Lua version at startup (#692).
* Improve the performance of custom entity collisions.
* Improve the performance of collisions by using a quadtree.
* Entities far from the camera are no longer suspended.

Lua API changes
---------------

Changes that introduce incompatibilities:

* Items with amount now have a default max amount of 1000 (#688).

Changes that do not introduce incompatibilities:

* Add a function sol.main.get_type() (#744).
* Add a method block:get_sprite().
* entity:set_optimization_distance() is now only a hint for the engine.

Data files format changes
-------------------------

* Dialogs: Allow empty texts.

___________________________

Solarus 1.4.5 (in progress)
___________________________

Bug fixes for the 1.4 release.

* Fix collisions triggered for removed entities (#710).

__________________________

Solarus 1.4.4 (2015-08-19)
__________________________

Bug fixes for the 1.4 release.

* Fix pickables falling in holes even when hooked (#740).

__________________________

Solarus 1.4.3 (2015-08-12)
__________________________

Bug fixes for the 1.4 release.

* Fix a compilation error with Mac OS X.
* Fix crash at exit when a surface has a movement with callback (#699).
* Fix crash when removing a custom entity (#690).
* Fix crash when a sprite file is missing or has no animation (#700).
* Fix crash when trying to remove a sprite already removed (#705).
* Fix crash when a custom entity collision or traversable test errors.
* Fix crash when changing hero sprites sometimes.
* Fix crash when sound buffers are full.
* Fix crash in map:get_ground() with out of bounds coordinates.
* Fix Lua error message saying "number expected" instead of "string expected".
* Fix game:set_command_keyboard/joypad_binding refusing parameters.