@@ -1760,15 +1760,16 @@ bool LuaContext::on_mouse_button_pressed(const InputEvent& event) {
   if (find_method("on_mouse_pressed")) {
 
     const std::string& button_name = InputEvent::get_mouse_button_name(event.get_mouse_button());
-    const Rectangle& position = event.get_mouse_position();
+    Point mouse_xy;
+    bool in_quest = event.get_mouse_position(mouse_xy);
 
-    // Don't call the lua event if this button doesn't exists in the Solarus API
-    // or if the mouse position is not inside the viewport.
-    if (!button_name.empty() && !position.is_flat()) {
+    // Don't call the Lua event if this button doesn't exist in the Solarus API
+    // or if the mouse position is not inside the quest display.
+    if (!button_name.empty() && in_quest) {
 
       push_string(l, button_name);
-      lua_pushinteger(l, position.get_x());
-      lua_pushinteger(l, position.get_y());
+      lua_pushinteger(l, mouse_xy.x);
+      lua_pushinteger(l, mouse_xy.y);
 
       bool success = call_function(4, 1, "on_mouse_pressed");
       if (!success) {
@@ -1800,15 +1801,16 @@ bool LuaContext::on_mouse_button_released(const InputEvent& event) {
   if (find_method("on_mouse_released")) {
 
     const std::string& button_name = InputEvent::get_mouse_button_name(event.get_mouse_button());
-    const Rectangle& position = event.get_mouse_position();
+    Point mouse_xy;
+    bool in_quest = event.get_mouse_position(mouse_xy);
 
-    // Don't call the lua event if this button doesn't exists in the Solarus API
-    // or if the mouse position is not inside the viewport.
-    if (!button_name.empty() && !position.is_flat()) {
+    // Don't call the Lua event if this button doesn't exist in the Solarus API
+    // or if the mouse position is not inside the quest display.
+    if (!button_name.empty() && in_quest) {
 
       push_string(l, button_name);
-      lua_pushinteger(l, position.get_x());
-      lua_pushinteger(l, position.get_y());
+      lua_pushinteger(l, mouse_xy.x);
+      lua_pushinteger(l, mouse_xy.y);
 
       bool success = call_function(4, 1, "on_mouse_released");
       if (!success) {
